--- a/index.html
+++ b/index.html
@@ -157,18 +157,22 @@
     <div class="container">
         <div class="row natur-row no-margin w-100">
             <div class="text-part col-md-6">
-                <h2 style="color: #2dad8f;">Introduction About Buu Ali Seena Foundation</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis varius faucibus
-                    ligula non congue. Suspendisse at pretium massa, sit amet
-                    vulputate nibh. Nam posuere eros dolor. Donec vel arcu sagittis, pretium nisl.</p>
-                <p>Cras faucibus laoreet nibh, sit amet tincidunt leo mollis in. Etiam eu mauris metus.
-                    Nulla facilisi. Etiam vestibulum,
-                    nisi et convallis elementum, leo orci aliquam metus, id posuere massa neque vitae
-                    arcu.</p>
+                <h1 style="color: #001f4e;">INTRODUCTION </h1>
+                <h2>Welcome to Bu Ali Seena Foundation</h2>
+                <p>A non-profit organization dedicated to providing free medical treatment and support to impoverished individuals in Sindh, Pakistan. At Bu Ali Seena Foundation, we firmly believe that every individual deserves access to quality healthcare, regardless of their financial situation or geographical location.
+                </p>
+                
+                <p>
+                    With a deep commitment to compassion, justice, and empowerment, we work tirelessly to uplift and improve the lives of those in need. Our approach is holistic, focusing not only on providing immediate medical relief but also on addressing the root causes of healthcare disparities in our community.
+                </p>
 
-                <p>Integer vulputate vehicula dolor a eleifend. Duis aliquam condimentum sapien,
-                    eget tempor justo. Aenean porttitor nibh metus, sollicitudin egestas metus posuere et.
-                    Fusce egestas volutpat metus, in sodales sem bibendum porta.</p>
+                <p>
+                 Through sustainable programs and initiatives, we aim to empower individuals and communities to take control of their health and well-being. Transparency, integrity, and accountability are fundamental values that guide our work. We ensure that every donation, whether financial or in the form of volunteer efforts, is utilized effectively and efficiently to maximize the impact on the lives of those we serve.
+                </p>
+
+                <p>
+                    We believe in the power of collaboration and partnership. We actively seek alliances with like-minded organizations, individuals, and institutions who share our vision. By working together, we amplify our collective impact and create lasting change that reverberates throughout our community. . .
+                </p>
             </div>
             <div class="image-part col-md-6">
                 <div class="row justify-content-center">
@@ -198,8 +202,11 @@
       <div class="container">
           <div class="row mission">
               <div class="col-md-6 mv-det">
-                  <h1 style="color: #2dad8f;">Our Mission</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer neque libero, pulvinar et elementum quis, facilisis eu ante. Mauris non placerat sapien. Pellentesque tempor arcu non odio scelerisque ullamcorper. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam varius eros consequat auctor gravida. Fusce tristique lacus at urna sollicitudin pulvinar. Suspendisse hendrerit ultrices mauris.</p>
+                  <h1>Our Mission</h1>
+                  <p>At Bu Ali Seena Foundation, our mission is to provide comprehensive, 
+                    free medical treatment and support to impoverished individuals in Sindh, 
+                    particularly those in need of neurological care, including diagnosis, treatment, and rehabilitation for conditions such as epilepsy, stroke, and brain injuries. We also provide treatment and support for other diseases, with a focus on operations and surgical interventions. Our goal is to bridge the healthcare 
+                    gap and improve the quality of life for our patients and their families in Sindh</p>
               </div>
               <div class="col-md-6 mv-img">
                   <img src="assets/images/mission.jpg" alt="">
@@ -211,7 +218,14 @@
               </div>
               <div class="col-md-6 mv-det">
                    <h1>Our Vision</h1>
-                   <p>Ut ultricies lacus a rutrum mollis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed porta dolor quis felis pulvinar dignissim. Etiam nisl ligula, ullamcorper non metus vitae, maximus efficitur mi. Vivamus ut ex ullamcorper, scelerisque lacus nec, commodo dui. Proin massa urna, volutpat vel augue eget, iaculis tristique dui.</p>
+                   <p>
+                    Our vision is a healthier, more compassionate Sindh, 
+                    where everyone has access to quality, affordable neurological healthcare, 
+                    regardless of their financial situation or geographical location. 
+                    We envision a future where Bu Ali Seena Foundation is a leading provider of free medical 
+                    treatment and support in Sindh, making a meaningful difference in the lives of thousands of people across the province, 
+                    and providing hope and healing to those affected by neurological disorders and other diseases.
+                   </p>
               </div>
           </div>
       </div>
@@ -224,7 +238,7 @@
         <div class="container">
             <div class="session-title row">
                 <h2>Our Causes</h2>
-                <p>We are a non-profital & Charity raising money for child education</p> 
+                <!-- <p>We are a non-profital & Charity raising money for child education</p>  -->
             </div>
             <div class="event-ro row">
                 <div class="col-md-4 col-sm-6">
@@ -303,7 +317,7 @@ But you can read the following facts in order to make sure of all pluses of our 
          	<div class="container">
          		<div class="row session-title">
         			<h2> Our Blog </h2>
-        			<p>Take a look at what people say about US </p>
+        			<!-- <p>Take a look at what people say about US </p> -->
         		</div>
         		<div class="blog-row row">
         			<div class="col-md-4 col-sm-6">
@@ -370,7 +384,7 @@ But you can read the following facts in order to make sure of all pluses of our 
                 <div class="container-fluid">
                     <div class="row session-title">
                         <h2> Our Gallery </h2>
-                        <p>Take a look at what people say about US </p>
+                        <!-- <p>Take a look at what people say about US </p> -->
                     </div>
                     <div class="row photos">
                         <div class="col-sm-6 col-md-4 col-lg-3 item">
