--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div id="menu" class="col-lg-9 col-md-12 d-none d-lg-block nav-col">
                         <ul class="navbad">
                             <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+                            <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
@@ -220,7 +220,6 @@
    
     
  <!-- ################# Mission Vision Start Here #######################--->
-  
   <section class="container-fluid mission-vision">
       <div class="container">
           <div class="row mission">
