--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
                         <ul class="navbad">
                             <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                            <li class="nav-item"><a class="nav-link" href="causes.html">Causes</a></li>
+                            <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
+                            <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact_us.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
