--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                     <div class="col-lg-6 d-none d-lg-block">
                         <ul class="ulleft">
                             <li>
-                                <i class="far fa-envelope"></i> info@buualiseena.com <span>|</span>
+                                <i class="far fa-envelope"> info@buualiseena.com </i>
                             </li>
                             <li>
-                                <i class="fas fa-phone-volume"></i> +876 987 666 5433
+                                <i class="fas fa-phone-volume"> +876 987 666 5433</i>
                             </li>
                         </ul>
                     </div>
