--- a/about_us.html
+++ b/about_us.html
@@ -25,10 +25,10 @@
                     <div class="col-lg-6 d-none d-lg-block">
                         <ul class="ulleft">
                             <li>
-                                <i class="far fa-envelope"></i> info@buualiseena.com <span>|</span>
+                                <i class="far fa-envelope"> info@buualiseena.com </i>
                             </li>
                             <li>
-                                <i class="fas fa-phone-volume"></i> +876 987 666 5433
+                                <i class="fas fa-phone-volume"> +876 987 666 5433</i>
                             </li>
                         </ul>
                     </div>
@@ -42,8 +42,8 @@
                         </ul>
                     </div>
                     <div class="col-lg-3 d-none d-md-block col-md-6 btn-bhed">
-                        <button class="btn btn-sm btn-success">Join Us</button>
-                        <button class="btn btn-sm btn-default">Donate</button>
+                        <button class="btn btn-sm btn-success"> <a class="btn-success" href="join-us.html">Join Us</a></button>
+                        <button class="btn btn-sm btn-default"><a href="donation.html">Donate</a></button>
                     </div>
                 </div>
             </div>
@@ -61,19 +61,19 @@
                     </div>
                     <div id="menu" class="col-lg-9 col-md-12 d-none d-lg-block nav-col">
                         <ul class="navbad">
-                            <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="about_us.html">About Us</a></li>
                             <li class="nav-item"><a class="nav-link" href="causes.html">Causes</a></li>
                             <li class="nav-item"><a class="nav-link" href="gallery.html">Gallery</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Blog</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
+                            <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
+                            <li class="nav-item"><a class="nav-link" href="contact_us.html">Contact Us</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
     </header>
- 
+    
   <!--  ************************* Page Title Starts Here ************************** -->
         
     <!-- <div class="page-nav no-margin row">
