--- a/gallery.html
+++ b/gallery.html
@@ -162,44 +162,50 @@
 
   
                  
-  <!--  ************************* Footer Starts Here ************************** -->
-   <!--Footer Start Here-->
-   <footer class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 col-sm-12">
-                <h2>About Us</h2>
-                <p>
-                    Smart Eye is a leading provider of information technology, consulting, and business process services. Our dedicated employees offer strategic insights, technological expertise and industry experience.
-                </p>
-                <p>We focus on technologies that promise to reduce costs, streamline processes and speed time-to-market, Backed by our strong quality processes and rich experience managing global... </p>
-            </div>
-            <div class="col-md-4 col-sm-12">
-                <h2>Pages</h2>
-                <ul class="list-unstyled link-list">
-                    <li><a ui-sref="about" href="#/about">About us</a><i class="fa fa-angle-right"></i></li>
-                    <li><a ui-sref="portfolio" href="#/portfolio">Portfolio</a><i class="fa fa-angle-right"></i></li>
-                    <li><a ui-sref="products" href="#/products">Latest jobs</a><i class="fa fa-angle-right"></i></li>
-                    <li><a ui-sref="gallery" href="#/gallery">Gallery</a><i class="fa fa-angle-right"></i></li>
-                    <li><a ui-sref="contact" href="#/contact">Contact us</a><i class="fa fa-angle-right"></i></li>
-                </ul>
-            </div>
-            <div class="col-md-4 col-sm-12 map-img">
-                <h2>Contact Us</h2>
-                <address class="md-margin-bottom-40">
-                    BlueDart <br>
-                    Marthandam (K.K District) <br>
-                    Tamil Nadu, IND <br>
-                    Phone: +91 9159669599 <br>
-                    Email: <a href="mailto:info@anybiz.com" class="">info@bluedart.in</a><br>
-                    Web: <a href="smart-eye.html" class="">www.bluedart.in</a>
-                </address>
+     <!--Footer Start Here-->
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-12">
+                    <h2>About Us</h2>
+                    <p>
+                        A non-profit organization dedicated to providing free medical treatment and support to impoverished individuals in Sindh, Pakistan. At Bu Ali Seena Foundation, we firmly believe that every individual deserves access to quality healthcare, regardless of their financial situation or geographical location.
+                    </p>
 
+                    <p>
+                        With a deep commitment to compassion, justice, and empowerment, 
+                        we work tirelessly to uplift and improve the lives of those in need. 
+                        Our approach is holistic, focusing not only on providing immediate medical 
+                        relief but also on addressing the root causes of healthcare disparities 
+                        in our community. . .
+                    </p>
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <h2>Pages</h2>
+                    <ul class="list-unstyled link-list">
+                        <li><a ui-sref="about" href="#/about">About us</a><i class="fa fa-angle-right"></i></li>
+                        <li><a ui-sref="portfolio" href="#/portfolio">Portfolio</a><i class="fa fa-angle-right"></i></li>
+                        <li><a ui-sref="products" href="#/products">Latest jobs</a><i class="fa fa-angle-right"></i></li>
+                        <li><a ui-sref="gallery" href="#/gallery">Gallery</a><i class="fa fa-angle-right"></i></li>
+                        <li><a ui-sref="contact" href="#/contact">Contact us</a><i class="fa fa-angle-right"></i></li>
+                    </ul>
+                </div>
+                <div class="col-md-4 col-sm-12 map-img">
+                    <h2>Contact Us</h2>
+                    <address class="md-margin-bottom-40">
+                        BlueDart <br>
+                        Marthandam (K.K District) <br>
+                        Tamil Nadu, IND <br>
+                        Phone: +91 9159669599 <br>
+                        Email: <a href="mailto:info@anybiz.com" class="">info@bluedart.in</a><br>
+                        Web: <a href="smart-eye.html" class="">www.bluedart.in</a>
+                    </address>
+
+                </div>
             </div>
         </div>
-    </div>
-</footer>
-<!--Close Footer Start Here-->
+    </footer>
+    <!--Close Footer Start Here-->
 
 <div class="copy">
 <div class="container">
