--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
             <div class="text-part col-md-6">
                 <h1 style="color: #001f4e;">INTRODUCTION </h1>
                 <h2>Welcome to Bu Ali Seena Foundation</h2>
-                <p>A non-profit organization dedicated to providing free medical treatment and support to impoverished individuals in Sindh, Pakistan. At Bu Ali Seena Foundation, we firmly believe that every individual deserves access to quality healthcare, regardless of their financial situation or geographical location.
+                <p>
+                    A non-profit organization dedicated to providing free medical treatment and support to impoverished individuals in Sindh, Pakistan. At Bu Ali Seena Foundation, we firmly believe that every individual deserves access to quality healthcare, regardless of their financial situation or geographical location.
                 </p>
                 
                 <p>
@@ -450,9 +451,16 @@ But you can read the following facts in order to make sure of all pluses of our 
                 <div class="col-md-4 col-sm-12">
                     <h2>About Us</h2>
                     <p>
-                        Smart Eye is a leading provider of information technology, consulting, and business process services. Our dedicated employees offer strategic insights, technological expertise and industry experience.
+                        A non-profit organization dedicated to providing free medical treatment and support to impoverished individuals in Sindh, Pakistan. At Bu Ali Seena Foundation, we firmly believe that every individual deserves access to quality healthcare, regardless of their financial situation or geographical location.
                     </p>
-                    <p>We focus on technologies that promise to reduce costs, streamline processes and speed time-to-market, Backed by our strong quality processes and rich experience managing global... </p>
+
+                    <p>
+                        With a deep commitment to compassion, justice, and empowerment, 
+                        we work tirelessly to uplift and improve the lives of those in need. 
+                        Our approach is holistic, focusing not only on providing immediate medical 
+                        relief but also on addressing the root causes of healthcare disparities 
+                        in our community. . .
+                    </p>
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <h2>Pages</h2>
